# playback-engine

./: .env.example  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  CLAUDE.md  eslint.config.mjs  nuxt.config.ts  package.json  postcss.config.mjs  tailwind.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cursor/rules/: architecture-design.mdc  coding-standards.mdc  development-workflow.mdc
src-tauri/crates/pcap-file-io/: Cargo.toml  README.md
src-tauri/crates/pcap-file-io/benches/: benchmarks.rs
src-tauri/crates/pcap-file-io/examples/: advanced_usage.rs  basic_usage.rs
src-tauri/crates/pcap-file-io/src/: config.rs  error.rs  io.rs  lib.rs  structures.rs  utils.rs
src-tauri/crates/pcap-file-io/tests/: integration_tests.rs
src-tauri/crates/pcap-io/: .rustfmt.toml  CLAUDE.md  Cargo.toml  README.md
src-tauri/crates/pcap-io/.cursor/rules/: architecture-design.mdc  coding-standards.mdc  development-workflow.mdc  project-manage.mdc
src-tauri/crates/pcap-io/docs/: INTERNAL_DESIGN.md
src-tauri/crates/pcap-io/examples/: dataset_usage.rs
src-tauri/crates/pcap-io/src/: config.rs  error.rs  file_reader.rs  file_writer.rs  lib.rs  reader.rs  structures.rs  traits.rs  utils.rs  writer.rs
src-tauri/crates/pcap-io/src/api/: mod.rs  reader.rs  writer.rs
src-tauri/crates/pcap-io/src/business/: cache.rs  config.rs  mod.rs  processor.rs
src-tauri/crates/pcap-io/src/data/: file_reader.rs  file_writer.rs  formats.rs  mod.rs  models.rs
src-tauri/crates/pcap-io/src/foundation/: error.rs  mod.rs  traits.rs  types.rs  utils.rs
src-tauri/crates/pcap-io/src/index/: reader.rs  (+1 more)
src-tauri/crates/pcap-io/tests/: README.md  test_auto_index_generation.rs  test_data_consistency.rs  test_index_functionality.rs  test_large_dataset.rs  test_small_dataset.rs
src-tauri/src/: commands.rs  lib.rs  main.rs  multi_pcap_reader.rs  pcap_reader.rs  pidx.rs  pproj.rs  project_manager.rs  types.rs
src-tauri/src/api/: config_commands.rs  geo_commands.rs  mod.rs  playback_commands.rs  project_commands.rs
src-tauri/src/commands/: dataset.rs  mod.rs  playback.rs  project.rs  system.rs
src-tauri/src/geo/: config.rs  data_transform.rs  geojson_service.rs  mod.rs  mvt_service.rs  tile_service.rs
src-tauri/src/manager/: cache.rs  mod.rs  project.rs  state.rs
src-tauri/src/pcap/: mod.rs  multi_reader.rs  reader.rs  writer.rs
src-tauri/src/pidx/: mod.rs  reader.rs  writer.rs
src-tauri/src/playback/: coordinator.rs  engine.rs  mod.rs  scheduler.rs  timeline.rs
src-tauri/src/pproj/: mod.rs  reader.rs  writer.rs
src-tauri/src/project/: loader.rs  mod.rs  structure.rs  validator.rs
src-tauri/src/state/: app_state.rs  config_state.rs  mod.rs  playback_state.rs
src-tauri/src/streaming/: config_manager.rs  mod.rs  test_sender.rs  udp_sender.rs
src-tauri/src/types/: common.rs  geo.rs  mod.rs  pcap.rs  pidx.rs  pproj.rs
src-tauri/tests/: simple_xml_test.rs  xml_serde_test.rs
(+132 files in other folders)
