[package]
name = "pcap-file-io"
version = "0.1.0"
edition = "2021"
description = "高性能PCAP文件读写库"
license = "MIT"
authors = ["KimoTech"]
repository = "https://github.com/kimotech/pcap-file-io"
keywords = ["pcap", "network", "packet", "file-format", "io"]
categories = ["network-programming", "filesystem", "parsing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[features]
default = ["std"]
std = []
alloc = []
no_std = []

[lib]
name = "pcap_file_io"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"
