[package]
name = "pcap-io"
version = "0.1.0"
edition = "2021"
description = "高性能PCAP文件读写库"
license = "MIT"
authors = ["Zoranner"]
repository = "https://github.com/Zoranner/pcap-file-io"
keywords = ["pcap", "network", "packet", "file-format", "io"]
categories = ["network-programming", "filesystem", "parsing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-xml-rs = "0.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
thiserror = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[features]
default = ["std"]
std = []
alloc = []
no_std = []
async = ["tokio"]

[lib]
name = "pcap_io"
path = "src/lib.rs"

[[example]]
name = "dataset_usage"
path = "examples/dataset_usage.rs"
